--- a/.github/workflows/sync-and-clean.yml
+++ b/.github/workflows/sync-and-clean.yml
@@ -2,7 +2,7 @@ name: Sync the Fork and Remove Unwanted Files
 
 on:
   schedule:
-    - cron: '0 0 1,16 * *'  # Runs at 00:00 UTC on the 1st and 16th of each month
+    - cron: '0 0 * * 0'  # Runs at 00:00 UTC on the 1st and 16th of each month
   workflow_dispatch:        # Allows manual triggering
 
 jobs:
